--- a/WebNET/Views/GioHang/XemGioHang.cshtml
+++ b/WebNET/Views/GioHang/XemGioHang.cshtml
@@ -21,175 +21,7 @@
                     </ol>
                 </nav>
             </div>
-            <div class="main__category__container">
-                <div class="category__search">
-                    <div class="search__by__category">
-                        <div class="search__title">
-                            <h3>CATEGORIES</h3>
-                        </div>
-                        <div class="list__category">
-                            <ul>
-                                <li>
-                                    <a>
-                                        organic food (15)
-                                    </a>
-                                </li>
-                                <li>
-                                    <a>
-                                        organic food (15)
-                                    </a>
-                                </li>
-                                <li>
-                                    <a>
-                                        organic food (15)
-                                    </a>
-                                </li>
-                                <li>
-                                    <a>
-                                        organic food (15)
-                                    </a>
-                                </li>
-                                <li>
-                                    <a>
-                                        organic food (15)
-                                    </a>
-                                </li>
-                                <li>
-                                    <a>
-                                        organic food (15)
-                                    </a>
-                                </li>
-                                <li>
-                                    <a>
-                                        organic food (15)
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="search__by__refine">
-                        <div class="search__title">
-                            <h3>REFINE SEARCH</h3>
-                        </div>
-                        <div class="list__search">
-                            <div class="title">
-                                <h4>COLOR</h4>
-                            </div>
-                            <div class="list__item">
-                                <form action="">
-                                    <input type="checkbox" /> Green(9) <br />
-                                    <input type="checkbox" /> Green(9) <br />
-                                    <input type="checkbox" /> Green(9) <br />
-                                    <input type="checkbox" /> Green(9) <br />
-                                </form>
-                            </div>
-                        </div>
-                        <div class="list__search">
-                            <div class="title">
-                                <h4>SIZE</h4>
-                            </div>
-                            <div class="list__item">
-                                <form action="">
-                                    <input type="checkbox" /> small(9) <br />
-                                    <input type="checkbox" /> small(9) <br />
-                                    <input type="checkbox" /> small(9) <br />
-                                </form>
-                            </div>
-                        </div>
-                        <div class="list__search">
-                            <div class="title">
-                                <h4>WEIGHT</h4>
-                            </div>
-                            <div class="list__item">
-                                <form action="">
-                                    <input type="checkbox" /> 5(9) <br />
-                                    <input type="checkbox" /> 12(9) <br />
-                                    <input type="checkbox" /> 32(9) <br />
-                                </form>
-                            </div>
-                        </div>
-                        <div class="button__search">
-                            <a href="">Refine Search</a>
-                        </div>
-                    </div>
-                    <div class="banner__container">
-                        <img src="img/left-banner.jpg" alt="" />
-                    </div>
-                    <div class="specials__container">
-                        <div class="search__title">
-                            <h3>SPECIALS</h3>
-                        </div>
-                        <div class="product-list">
-                            <ul>
-                                <li>
-                                    <div class="product-item">
-                                        <div class="image">
-                                            <img src="img/dudu.jpg" alt="" />
-                                        </div>
-                                        <div class="content__wrapper">
-                                            <div class="content">
-                                                <span class="hover">Exercitat Virginia</span>
-                                                <div class="price">
-                                                    <div class="price__sale">
-                                                        <span>$100</span>
-                                                    </div>
-                                                    <div class="price__cost">
-                                                        <span>$119</span>
-                                                    </div>
-                                                </div>
-                                                <a class="hover">Add To Cart</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-
-                                <li>
-                                    <div class="product-item">
-                                        <div class="image">
-                                            <img src="img/dudu.jpg" alt="" />
-                                        </div>
-                                        <div class="content__wrapper">
-                                            <div class="content">
-                                                <span class="hover">Exercitat Virginia</span>
-                                                <div class="price">
-                                                    <div class="price__sale">
-                                                        <span>$100</span>
-                                                    </div>
-                                                    <div class="price__cost">
-                                                        <span>$119</span>
-                                                    </div>
-                                                </div>
-                                                <a class="hover">Add To Cart</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-
-                                <li>
-                                    <div class="product-item">
-                                        <div class="image">
-                                            <img src="img/dudu.jpg" alt="" />
-                                        </div>
-                                        <div class="content__wrapper">
-                                            <div class="content">
-                                                <span class="hover">Exercitat Virginia</span>
-                                                <div class="price">
-                                                    <div class="price__sale">
-                                                        <span>$100</span>
-                                                    </div>
-                                                    <div class="price__cost">
-                                                        <span>$119</span>
-                                                    </div>
-                                                </div>
-                                                <a class="hover">Add To Cart</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+            <div class="main-content__container">
                 <div style="text-align:center">
                     <div>
                         <h1 style="color:red">Your cart is empty!</h1>
@@ -214,181 +46,11 @@ else
                     <ol class="breadcrumb non-bg">
 
                         <li class="breadcrumb-item color-green" aria-current="page">Cart Page</li>
-
                     </ol>
                 </nav>
             </div>
-            <div class="main__category__container">
-                <div class="category__search">
-                    <div class="search__by__category">
-                        <div class="search__title">
-                            <h3>CATEGORIES</h3>
-                        </div>
-                        <div class="list__category">
-                            <ul>
-                                <li>
-                                    <a>
-                                        organic food (15)
-                                    </a>
-                                </li>
-                                <li>
-                                    <a>
-                                        organic food (15)
-                                    </a>
-                                </li>
-                                <li>
-                                    <a>
-                                        organic food (15)
-                                    </a>
-                                </li>
-                                <li>
-                                    <a>
-                                        organic food (15)
-                                    </a>
-                                </li>
-                                <li>
-                                    <a>
-                                        organic food (15)
-                                    </a>
-                                </li>
-                                <li>
-                                    <a>
-                                        organic food (15)
-                                    </a>
-                                </li>
-                                <li>
-                                    <a>
-                                        organic food (15)
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="search__by__refine">
-                        <div class="search__title">
-                            <h3>REFINE SEARCH</h3>
-                        </div>
-                        <div class="list__search">
-                            <div class="title">
-                                <h4>COLOR</h4>
-                            </div>
-                            <div class="list__item">
-                                <form action="">
-                                    <input type="checkbox" /> Green(9) <br />
-                                    <input type="checkbox" /> Green(9) <br />
-                                    <input type="checkbox" /> Green(9) <br />
-                                    <input type="checkbox" /> Green(9) <br />
-                                </form>
-                            </div>
-                        </div>
-                        <div class="list__search">
-                            <div class="title">
-                                <h4>SIZE</h4>
-                            </div>
-                            <div class="list__item">
-                                <form action="">
-                                    <input type="checkbox" /> small(9) <br />
-                                    <input type="checkbox" /> small(9) <br />
-                                    <input type="checkbox" /> small(9) <br />
-                                </form>
-                            </div>
-                        </div>
-                        <div class="list__search">
-                            <div class="title">
-                                <h4>WEIGHT</h4>
-                            </div>
-                            <div class="list__item">
-                                <form action="">
-                                    <input type="checkbox" /> 5(9) <br />
-                                    <input type="checkbox" /> 12(9) <br />
-                                    <input type="checkbox" /> 32(9) <br />
-                                </form>
-                            </div>
-                        </div>
-                        <div class="button__search">
-                            <a href="">Refine Search</a>
-                        </div>
-                    </div>
-                    <div class="banner__container">
-                        <img src="img/left-banner.jpg" alt="" />
-                    </div>
-                    <div class="specials__container">
-                        <div class="search__title">
-                            <h3>SPECIALS</h3>
-                        </div>
-                        <div class="product-list">
-                            <ul>
-                                <li>
-                                    <div class="product-item">
-                                        <div class="image">
-                                            <img src="img/dudu.jpg" alt="" />
-                                        </div>
-                                        <div class="content__wrapper">
-                                            <div class="content">
-                                                <span class="hover">Exercitat Virginia</span>
-                                                <div class="price">
-                                                    <div class="price__sale">
-                                                        <span>$100</span>
-                                                    </div>
-                                                    <div class="price__cost">
-                                                        <span>$119</span>
-                                                    </div>
-                                                </div>
-                                                <a class="hover">Add To Cart</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-
-                                <li>
-                                    <div class="product-item">
-                                        <div class="image">
-                                            <img src="img/dudu.jpg" alt="" />
-                                        </div>
-                                        <div class="content__wrapper">
-                                            <div class="content">
-                                                <span class="hover">Exercitat Virginia</span>
-                                                <div class="price">
-                                                    <div class="price__sale">
-                                                        <span>$100</span>
-                                                    </div>
-                                                    <div class="price__cost">
-                                                        <span>$119</span>
-                                                    </div>
-                                                </div>
-                                                <a class="hover">Add To Cart</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-
-                                <li>
-                                    <div class="product-item">
-                                        <div class="image">
-                                            <img src="img/dudu.jpg" alt="" />
-                                        </div>
-                                        <div class="content__wrapper">
-                                            <div class="content">
-                                                <span class="hover">Exercitat Virginia</span>
-                                                <div class="price">
-                                                    <div class="price__sale">
-                                                        <span>$100</span>
-                                                    </div>
-                                                    <div class="price__cost">
-                                                        <span>$119</span>
-                                                    </div>
-                                                </div>
-                                                <a class="hover">Add To Cart</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="cart__body__wrapper">
+            <div class="main-content__container">
+                <div class="main-content__container">
                     <div class="cart__body">
                         <div class="blog__titles">
                             <h3>SHOPPING CART</h3>
@@ -398,7 +60,7 @@ else
                             <div class="cart__body__list">
                                 <table style="text-align:center">
                                     <tr>
-                                        <th >Image</th>
+                                        <th>Image</th>
                                         <th>Product Name</th>
                                         <th>Model</th>
                                         <th class="quantity__table">Quantity</th>
@@ -447,7 +109,7 @@ else
                                     @Html.ActionLink("Continue Shopping", "Index", "Home")
                                 </div>
                                 <div class="to__checkout apply__coupon__button get__quotes">
-                                    @Html.ActionLink("Checkout", "Checkout", "Checkout")
+                                    @Html.ActionLink("Checkout", "Checkout", "GioHang")
                                 </div>
                             </div>
                         </div>
